--- a/src/Estilos.css
+++ b/src/Estilos.css
@@ -1,27 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0');
 
+.material-symbols-outlined {
+  padding-top: 5px;
+}
 
-header {
-    background-color: yellow;
-    width: 100%;
-    position: fixed;
-    z-index: 100;
-  }
+.ml-auto {
+  margin-left: auto;
+}
 
-  .nombrePagina {
-    float: left;
-  }
-
-  nav {
-    float: right;
-  }
-  nav ul {
-    list-style: none;
-    overflow: hidden; 
-  }
-
-  nav ul li {
-    float: right;
-    font-family: Arial, Helvetica, sans-serif;;
-    font-size: 20px;
-  }
+.botonCarrito {
+  margin-left: 15px !important;
+}
